<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gastastic</string>
    <string name="car_name">Name</string>
    <string name="mpglabel">Miles per Gallon:</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="car_context_modify">Modify Car</string>
    <string name="gps_waiting">Waiting for GPS…</string>
    <string name="gps_connected">Connected to GPS!</string>
    <string name="no_travel_distance">Travelled 0 meters.</string>
    <string name="finish">Finish</string>
    <string name="facebook_share">Share with Facebook</string>
    <string name="app_id">768268919931401</string>
    <string name="finish_trip_header">
        <![CDATA[You burned <gallons> gallons of gasoline, which is equivalent to:]]></string>
    <string name="map_view_description">Map Viewer</string>
    <string name="debug_car">Debug</string>
    <string name="trip_gps_connection_description">Trip GPS Connection Icon
    </string>
    <string name="trip_debug_description">Debugger Status</string>
    <string name="polaroid_view_description">Trip Polaroid Rendering Area
    </string>
    <string name="gps_begin_moving">Begin Moving to Collect Data</string>
    <string name="add_polaroids">Add Polaroids</string>
    <string name="gps_keep_moving">Keep Moving to Collect Data</string>
    <string name="view_usage_context_title">View Lifetime Usage</string>
    <string name="menu_usage">View Total Usage</string>
    <string name="menu_savings">View Total Savings</string>
    <string name="delete_usage">Delete Usage Statistics</string>
</resources>